# fastapi-app

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  entrypoint.py  pyproject.toml  requirements.freeze  requirements.txt
app/: __init__.py  config.py  workers.py
app/api/: __init__.py  health.py  tasks.py
env/: local.env
ops/: freeze-requirements.sh
wsgi/: gunicorn.conf
