[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = "Template FastAPI app."
authors = ["Colt Chapin <colton.chapin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.52.0"

[tool.poetry.dev-dependencies]
gunicorn = "^20.0.4"
uvicorn = "^0.11.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
